force-app/main/default/objects/Device__c/Device__c.object-meta.xml
<CustomObject>
    <label>見積項目</label>
    <nameField>
        <label>見積項目名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>