force-app/main/default/objects/Device__c/fields/AgencyProvisionPriceSum__c.field-meta.xml
<CustomField>
    <fullName>AgencyProvisionPriceSum__c</fullName>
    <label>代理店提供価格合計(積み上げ)</label>
    <summarizedField>Detail__c.ProvisionPrice__c</summarizedField>
    <summaryForeignKey>Detail__c.Device__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>