force-app/main/default/objects/Device__c/fields/AgencyProvisionPriceSumFormula__c.field-meta.xml
<CustomField>
    <fullName>AgencyProvisionPriceSumFormula__c</fullName>
    <formula>IF( ISNULL( CreditAgencyProvisionUnitPrice__c )
, AgencyProvisionPriceSum__c * IF(ISBLANK(  QuantityNumeric__c ),1, QuantityNumeric__c )
, CreditAgencyProvisionUnitPrice__c * IF(ISBLANK(  QuantityNumeric__c ),1, QuantityNumeric__c )
)</formula>
    <label>代理店提供価格合計</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>