force-app/main/default/objects/Device__c/fields/ClientAnswerAmount_free__c.field-meta.xml
<CustomField>
    <fullName>ClientAnswerAmount_free__c</fullName>
    <label>客先回答金額(手入力)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>