force-app/main/default/objects/Device__c/fields/ClientAnswerAmountTotal__c.field-meta.xml
<CustomField>
    <fullName>ClientAnswerAmountTotal__c</fullName>
    <formula>ClientAnswerAmount__c * IF(ISNULL(  QuantityNumeric__c ), 0 ,   QuantityNumeric__c )</formula>
    <label>客先回答金額合計</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>