force-app/main/default/objects/Device__c/fields/ClientAnswerAmountTotalTimesDSCQuantity__c.field-meta.xml
<CustomField>
    <fullName>ClientAnswerAmountTotalTimesDSCQuantity__c</fullName>
    <formula>ClientAnswerAmountTotal__c  * 
IF(ISBLANK(Device_SmallCategory__c),1, 
    IF(ISBLANK(Device_SmallCategory__r.Quantity__c) , 1, Device_SmallCategory__r.Quantity__c)
)</formula>
    <label>客先回答金額合計×細別数量</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>