force-app/main/default/objects/Device__c/fields/ClientAnswerWeight_free__c.field-meta.xml
<CustomField>
    <fullName>ClientAnswerWeight_free__c</fullName>
    <label>客先回答重量(手入力)</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>