force-app/main/default/objects/Device__c/fields/ConstructionZone__c.field-meta.xml
<CustomField>
    <fullName>ConstructionZone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>工区</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>対象の見積に属さない工事区分を選択しています。
選択し直してください。</errorMessage>
        <filterItems>
            <field>$Source.Quote__c</field>
            <operation>equals</operation>
            <valueField>ConstructionZone__c.Quote__r.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ConstructionZone__c</referenceTo>
    <relationshipLabel>見積項目</relationshipLabel>
    <relationshipName>Devices</relationshipName>
    <type>Lookup</type>
</CustomField>