force-app/main/default/objects/Device__c/fields/ConstructionZoneId__c.field-meta.xml
<CustomField>
    <fullName>ConstructionZoneId__c</fullName>
    <formula>Device_SmallCategory__r.Device_MiddleCategory__r.Device_LargeCategory__r.ConstructionZone__r.Id</formula>
    <label>工区ID</label>
    <type>Text</type>
</CustomField>