force-app/main/default/objects/Device__c/fields/CreditAgencyProvisionUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>CreditAgencyProvisionUnitPrice__c</fullName>
    <label>単位代理店提供単価</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>