force-app/main/default/objects/Device__c/fields/CreditQuoteAmount__c.field-meta.xml
<CustomField>
    <fullName>CreditQuoteAmount__c</fullName>
    <label>単位見積金額</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>