force-app/main/default/objects/Device__c/fields/CreditWeight__c.field-meta.xml
<CustomField>
    <fullName>CreditWeight__c</fullName>
    <label>単位重量</label>
    <precision>10</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>