force-app/main/default/objects/Device__c/fields/Device_SmallCategory__c.field-meta.xml
<CustomField>
    <fullName>Device_SmallCategory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>細別</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>対象の見積に属さない細別を選択しています。
選択し直してください。</errorMessage>
        <filterItems>
            <field>$Source.Quote__c</field>
            <operation>equals</operation>
            <valueField>Device_SmallCategory__c.Quote__r.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Device_SmallCategory__c</referenceTo>
    <relationshipLabel>見積項目</relationshipLabel>
    <relationshipName>Device_SmallCategories</relationshipName>
    <type>Lookup</type>
</CustomField>