force-app/main/default/objects/Device__c/fields/DeviceNameEqualSpecificationName__c.field-meta.xml
<CustomField>
    <fullName>DeviceNameEqualSpecificationName__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>見積項目名を規格名として扱う場合にチェックを入れて下さい</inlineHelpText>
    <label>見積項目名と規格名を同名とする</label>
    <type>Checkbox</type>
</CustomField>