force-app/main/default/objects/Device__c/fields/EquipManageCostTarget__c.field-meta.xml
<CustomField>
    <fullName>EquipManageCostTarget__c</fullName>
    <defaultValue>true</defaultValue>
    <label>国土交通省機器管理費対象</label>
    <type>Checkbox</type>
</CustomField>