force-app/main/default/objects/Device__c/fields/EquipmentCostExistence__c.field-meta.xml
<CustomField>
    <fullName>EquipmentCostExistence__c</fullName>
    <label>国土交通省機器管理費有無</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>あり</fullName>
            </value>
            <value>
                <fullName>なし</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>