force-app/main/default/objects/Device__c/fields/GeneralAdminExpensesExistence__c.field-meta.xml
<CustomField>
    <fullName>GeneralAdminExpensesExistence__c</fullName>
    <defaultValue>true</defaultValue>
    <label>一般管理費有無</label>
    <type>Checkbox</type>
</CustomField>