force-app/main/default/objects/Device__c/fields/GeneralAdministrativeExpenses__c.field-meta.xml
<CustomField>
    <fullName>GeneralAdministrativeExpenses__c</fullName>
    <formula>IF( GeneralAdminExpensesExistence__c ,PriceSum__c *  GeneralAdministrativeExpensesCopy__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>一般管理費</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>