force-app/main/default/objects/Device__c/fields/GeneralAdministrativeExpensesCopy__c.field-meta.xml
<CustomField>
    <fullName>GeneralAdministrativeExpensesCopy__c</fullName>
    <label>一般管理費率</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>