force-app/main/default/objects/Device__c/fields/IsIncludeConstruction__c.field-meta.xml
<CustomField>
    <fullName>IsIncludeConstruction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>据付工事含む</label>
    <type>Checkbox</type>
</CustomField>