force-app/main/default/objects/Device__c/fields/IsMachineMake__c.field-meta.xml
<CustomField>
    <fullName>IsMachineMake__c</fullName>
    <defaultValue>false</defaultValue>
    <label>機器製造のみを行う場合(補正係数0.5)</label>
    <type>Checkbox</type>
</CustomField>