force-app/main/default/objects/Device__c/fields/IsMachineSupply__c.field-meta.xml
<CustomField>
    <fullName>IsMachineSupply__c</fullName>
    <defaultValue>false</defaultValue>
    <label>機器を支給する場合(補正係数0.5)</label>
    <type>Checkbox</type>
</CustomField>