force-app/main/default/objects/Device__c/fields/MachineControlAmount__c.field-meta.xml
<CustomField>
    <fullName>MachineControlAmount__c</fullName>
    <label>国交省機器管理費</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>