force-app/main/default/objects/Device__c/fields/MachineControlRate__c.field-meta.xml
<CustomField>
    <fullName>MachineControlRate__c</fullName>
    <label>国交省機器管理費率</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>