force-app/main/default/objects/Device__c/fields/MachineManagerSummary__c.field-meta.xml
<CustomField>
    <fullName>MachineManagerSummary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>国交省機器管理費集計項目</label>
    <referenceTo>Device__c</referenceTo>
    <relationshipLabel>見積項目</relationshipLabel>
    <relationshipName>MachineManagerSummary</relationshipName>
    <type>Lookup</type>
</CustomField>