force-app/main/default/objects/Device__c/fields/MajorClassification__c.field-meta.xml
<CustomField>
    <fullName>MajorClassification__c</fullName>
    <label>大分類名</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>RecordTypeOfQuote__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>MajorClassification</valueSetName>
    </valueSet>
</CustomField>