force-app/main/default/objects/Device__c/fields/MinorClassification__c.field-meta.xml
<CustomField>
    <fullName>MinorClassification__c</fullName>
    <label>小分類名</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>MajorClassification__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>66kV C-GIS</fullName>
            </value>
            <value>
                <fullName>22kV C-GIS</fullName>
            </value>
            <value>
                <fullName>ブロック(気中)キュービクル</fullName>
            </value>
            <value>
                <fullName>特高監視盤</fullName>
            </value>
            <value>
                <fullName>特高変圧器</fullName>
            </value>
            <value>
                <fullName>高圧変圧器</fullName>
            </value>
            <value>
                <fullName>変圧器収納盤</fullName>
            </value>
            <value>
                <fullName>バスダクト</fullName>
            </value>
            <value>
                <fullName>高圧コンビ盤</fullName>
            </value>
            <value>
                <fullName>高圧コンデンサ・リアクトル</fullName>
            </value>
            <value>
                <fullName>低圧コンデンサ・リアクトル</fullName>
            </value>
            <value>
                <fullName>低圧盤</fullName>
            </value>
            <value>
                <fullName>現場盤</fullName>
            </value>
            <value>
                <fullName>リレー盤</fullName>
            </value>
            <value>
                <fullName>ACB盤</fullName>
            </value>
            <value>
                <fullName>200V</fullName>
            </value>
            <value>
                <fullName>400V</fullName>
            </value>
            <value>
                <fullName>共通</fullName>
            </value>
            <value>
                <fullName>3.0kV/3.3kV</fullName>
            </value>
            <value>
                <fullName>6.0kV/6.6kV</fullName>
            </value>
            <value>
                <fullName>CTR</fullName>
            </value>
            <value>
                <fullName>OPS</fullName>
            </value>
            <value>
                <fullName>計装盤</fullName>
            </value>
            <value>
                <fullName>記録計</fullName>
            </value>
            <value>
                <fullName>ラック･パネル計器</fullName>
            </value>
            <value>
                <fullName>流量計</fullName>
            </value>
            <value>
                <fullName>水位計</fullName>
            </value>
            <value>
                <fullName>濃度計</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
            <value>
                <fullName>ACG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>