force-app/main/default/objects/Device__c/fields/NETCalculateCategory__c.field-meta.xml
<CustomField>
    <fullName>NETCalculateCategory__c</fullName>
    <label>NET計算区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>受変電</fullName>
            </value>
            <value>
                <fullName>UPS</fullName>
            </value>
            <value>
                <fullName>自家発</fullName>
            </value>
            <value>
                <fullName>ビルシ</fullName>
            </value>
            <value>
                <fullName>映像</fullName>
            </value>
            <value>
                <fullName>労務</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>