force-app/main/default/objects/Device__c/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <inlineHelpText>大分類が「材料」or「システムインテグレーション費」の場合は要入力</inlineHelpText>
    <label>手入力金額設定根拠</label>
    <length>50</length>
    <type>Text</type>
</CustomField>