force-app/main/default/objects/Device__c/fields/OwnerBranchOffice__c.field-meta.xml
<CustomField>
    <fullName>OwnerBranchOffice__c</fullName>
    <formula>TEXT(Quote__r.PickDivision__c )</formula>
    <label>共有先の支社</label>
    <type>Text</type>
</CustomField>