force-app/main/default/objects/Device__c/fields/PriceCoefficient__c.field-meta.xml
<CustomField>
    <fullName>PriceCoefficient__c</fullName>
    <defaultValue>1</defaultValue>
    <label>価格係数</label>
    <precision>6</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>