force-app/main/default/objects/Device__c/fields/PriceSum__c.field-meta.xml
<CustomField>
    <fullName>PriceSum__c</fullName>
    <formula>IF( ISNULL(CreditQuoteAmount__c)
    ,  StandardPriceSumFormula__c * PriceCoefficient__c
    , CreditQuoteAmount__c * PriceCoefficient__c
)</formula>
    <label>積算金額×価格係数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>