force-app/main/default/objects/Device__c/fields/PriorQuoteSpecificationNumber__c.field-meta.xml
<CustomField>
    <fullName>PriorQuoteSpecificationNumber__c</fullName>
    <label>項目番号_変更前</label>
    <length>20</length>
    <type>Text</type>
</CustomField>