force-app/main/default/objects/Device__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <label>数量（数量×合計の計算式有り）</label>
    <length>5</length>
    <type>Text</type>
</CustomField>