force-app/main/default/objects/Device__c/fields/QuantityNumeric__c.field-meta.xml
<CustomField>
    <fullName>QuantityNumeric__c</fullName>
    <description>数量（Quantity__c）の入力値を数値として保持するための項目</description>
    <formula>VALUE( Quantity__c )</formula>
    <label>数量</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>