force-app/main/default/objects/Device__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <inlineHelpText>明細の変圧器、コンデンサ、発電機は周波数により価格が異なるので、周波数の異なるエリアの見積にコピーする場合は注意してください</inlineHelpText>
    <label>見積</label>
    <referenceTo>Quote__c</referenceTo>
    <relationshipLabel>見積項目</relationshipLabel>
    <relationshipName>Devices</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>