force-app/main/default/objects/Device__c/fields/QuoteNumber__c.field-meta.xml
<CustomField>
    <fullName>QuoteNumber__c</fullName>
    <formula>Quote__r.QuoteNumber__c</formula>
    <label>見積番号</label>
    <type>Text</type>
</CustomField>