force-app/main/default/objects/Device__c/fields/QuoteSpecificationNumber__c.field-meta.xml
<CustomField>
    <fullName>QuoteSpecificationNumber__c</fullName>
    <label>項目番号</label>
    <length>20</length>
    <type>Text</type>
</CustomField>