force-app/main/default/objects/Device__c/fields/QuoteTarget__c.field-meta.xml
<CustomField>
    <fullName>QuoteTarget__c</fullName>
    <label>見積対象</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>見積対象</fullName>
                <default>true</default>
                <label>見積対象</label>
            </value>
            <value>
                <fullName>見積対象(製作のみ)</fullName>
            </value>
            <value>
                <fullName>見積対象外</fullName>
            </value>
            <value>
                <fullName>見積対象外(製作のみ)</fullName>
            </value>
            <value>
                <fullName>支給品</fullName>
            </value>
            <value>
                <fullName>移設品</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>