force-app/main/default/objects/Device__c/fields/RecordTypeOfQuote__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeOfQuote__c</fullName>
    <label>見積レコードタイプ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>施設</fullName>
            </value>
            <value>
                <fullName>水環境</fullName>
            </value>
            <value>
                <fullName>官需</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>