force-app/main/default/objects/Device__c/fields/SalesCostSum__c.field-meta.xml
<CustomField>
    <fullName>SalesCostSum__c</fullName>
    <formula>PriceSum__c +  GeneralAdministrativeExpenses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>見積金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>