force-app/main/default/objects/Device__c/fields/SalesCostSumBase__c.field-meta.xml
<CustomField>
    <fullName>SalesCostSumBase__c</fullName>
    <formula>StandardPriceSumFormula__c + GeneralAdministrativeExpenses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>見積金額(ベース)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>