force-app/main/default/objects/Device__c/fields/SectionExistence__c.field-meta.xml
<CustomField>
    <fullName>SectionExistence__c</fullName>
    <label>工区有無</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>なし</fullName>
            </value>
            <value>
                <fullName>あり</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>