force-app/main/default/objects/Device__c/fields/SIChaeck__c.field-meta.xml
<CustomField>
    <fullName>SIChaeck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>システムインテグレーション費</label>
    <type>Checkbox</type>
</CustomField>