force-app/main/default/objects/Device__c/fields/SpecificationName__c.field-meta.xml
<CustomField>
    <fullName>SpecificationName__c</fullName>
    <inlineHelpText>帳票に出力される規格名です</inlineHelpText>
    <label>規格名</label>
    <length>80</length>
    <type>Text</type>
</CustomField>