force-app/main/default/objects/Device__c/fields/StandardPriceSum__c.field-meta.xml
<CustomField>
    <fullName>StandardPriceSum__c</fullName>
    <label>見積金額合計(積み上げ)</label>
    <summarizedField>Detail__c.Price__c</summarizedField>
    <summaryForeignKey>Detail__c.Device__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>