force-app/main/default/objects/Device__c/fields/StandardPriceSumFormula__c.field-meta.xml
<CustomField>
    <fullName>StandardPriceSumFormula__c</fullName>
    <formula>StandardPriceSum__c</formula>
    <label>積算金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>