force-app/main/default/objects/Device__c/fields/WcSum__c.field-meta.xml
<CustomField>
    <fullName>WcSum__c</fullName>
    <label>WC金額(積み上げ)</label>
    <summarizedField>Detail__c.WC__c</summarizedField>
    <summaryForeignKey>Detail__c.Device__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>