force-app/main/default/objects/Device__c/fields/WcSumFormula__c.field-meta.xml
<CustomField>
    <fullName>WcSumFormula__c</fullName>
    <formula>IF( ISNULL( CreditWC__c )
, WcSum__c * IF(ISBLANK(  QuantityNumeric__c ),1, QuantityNumeric__c )
, CreditWC__c * IF(ISBLANK( QuantityNumeric__c ),1, QuantityNumeric__c )
)</formula>
    <label>WC金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>