force-app/main/default/objects/Device__c/fields/WeightSum__c.field-meta.xml
<CustomField>
    <fullName>WeightSum__c</fullName>
    <label>重量合計(積み上げ)</label>
    <summarizedField>Detail__c.Weight__c</summarizedField>
    <summaryForeignKey>Detail__c.Device__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>