force-app/main/default/objects/Device__c/fields/WeightSumFormula__c.field-meta.xml
<CustomField>
    <fullName>WeightSumFormula__c</fullName>
    <formula>IF( ISNULL( CreditWeight__c ),
    IF(ISNULL( ClientAnswerWeight_free__c )
        , WeightSum__c * IF(ISBLANK( QuantityNumeric__c ),1, QuantityNumeric__c )
    , ClientAnswerWeight_free__c * IF(ISBLANK( QuantityNumeric__c ),1, QuantityNumeric__c ))
, CreditWeight__c * IF(ISBLANK( QuantityNumeric__c ),1, QuantityNumeric__c )
)</formula>
    <label>重量合計</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>