force-app/main/default/objects/Device__c/recordTypes/Facility.recordType-meta.xml
<RecordType>
    <fullName>Facility</fullName>
    <active>true</active>
    <label>施設</label>
</RecordType>