force-app/main/default/objects/Device__c/validationRules/EquipManageCostCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>EquipManageCostCheck</fullName>
    <active>false</active>
    <errorConditionFormula>AND( ISPICKVAL( Quote__r.EquipmentCostExistence__c ,&quot;なし&quot;), ISPICKVAL(  MajorClassification__c  ,&quot;システムインテグレーション費&quot;) )</errorConditionFormula>
    <errorDisplayField>MajorClassification__c</errorDisplayField>
    <errorMessage>ただいま 国土交通省機器管理費「なし」の場合は 大分類「システムインテグレーション費」は選択できません。
システムインテグレーション費の見積項目作成には大分類「技派・予備品等、他社」を選択してください。</errorMessage>
</ValidationRule>