force-app/main/default/objects/Device__c/validationRules/NoteCheck_AnswerPrice.validationRule-meta.xml
<ValidationRule>
    <fullName>NoteCheck_AnswerPrice</fullName>
    <active>true</active>
    <errorConditionFormula>AND (NOT( ISBLANK(ClientAnswerAmount_free__c ) ),  ISBLANK( Note__c ) )</errorConditionFormula>
    <errorDisplayField>Note__c</errorDisplayField>
    <errorMessage>客先回答金額を手入力した場合は備考を必ず入力してください。</errorMessage>
</ValidationRule>