force-app/main/default/objects/Device__c/validationRules/NumericalValueCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>NumericalValueCheck</fullName>
    <active>true</active>
    <description>入力された値が全角、半角問わず数値か否かをチェックする。</description>
    <errorConditionFormula>AND( 
NOT( ISBLANK( Quantity__c ) ) ,NOT( REGEX( Quantity__c , &quot;[0-9０-９]*&quot; ) ) 
)</errorConditionFormula>
    <errorMessage>全角または半角の数字で入力してください。</errorMessage>
</ValidationRule>