force-app/main/default/objects/Device__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>MajorClassification__c</columns>
    <columns>MinorClassification__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>